--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,6 +17,17 @@
       }      
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FHN636LZD6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-FHN636LZD6');
+  </script>
+
   </head>
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
